--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Développeur Web à Lomé (Togo) - Di Gino</title>
-  <meta name="title" content="Développeur Web Front-end à Lomé, Togo - Di Gino">
+  <title>Développeur Web et Mobile, Designer UI/UX - Di Gino</title>
+  <meta name="title" content="Développeur Web et Mobile, Designer UI/UX à Lomé, Togo - Di Gino">
   <meta name="description"
-    content="Développeur Web Front-end et Designer UI/UX résidant à Lomé (Togo), je me spécialise dans le développement web et mobile. Mes compétences me permettent de vous concevoir un site web ou une application aux interfaces aussi bien agréables à voir qu'à utiliser. Je peux également vous créer des maquettes et prototypes de site web et d'application mobile.">
+    content="Développeur Web Front-end, Développeur d'applications mobile et Designer UI/UX résidant à Lomé (Togo), je me spécialise dans le développement web et d'applications mobile(Android). Mes compétences me permettent de vous concevoir un site web ou une application aux interfaces aussi bien agréables à voir qu'à utiliser. Je peux également vous créer des maquettes et prototypes de site web et d'application mobile.">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://digino.github.io/">
-  <meta property="og:title" content="Développeur Web Front-end résidant à Lomé, Togo - Di Gino">
+  <meta property="og:title" content="Développeur Web et Mobile, Designer UI/UX à Lomé, Togo - Di Gino">
   <meta property="og:description"
-    content="Développeur Web Front-end et Designer UI/UX résidant à Lomé (Togo), je me spécialise dans le développement web et mobile. Mes compétences me permettent de vous concevoir un site web ou une application aux interfaces aussi bien agréables à voir qu'à utiliser. Je peux également vous créer des maquettes et prototypes de site web et d'application mobile.">
+    content="Développeur Web Front-end, Développeur d'applications mobile et Designer UI/UX résidant à Lomé (Togo), je me spécialise dans le développement web et d'applications mobile(Android). Mes compétences me permettent de vous concevoir un site web ou une application aux interfaces aussi bien agréables à voir qu'à utiliser. Je peux également vous créer des maquettes et prototypes de site web et d'application mobile.">
   <meta property="og:image" content="https://digino.github.io/img/logo2x.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://digino.github.io/">
-  <meta property="twitter:title" content="Développeur Web Front-end résidant à Lomé, Togo - Di Gino">
+  <meta property="twitter:title" content="Développeur Web et Mobile, Designer UI/UX à Lomé, Togo - Di Gino">
   <meta property="twitter:description"
-    content="Développeur Web Front-end et Designer UI/UX résidant à Lomé (Togo), je me spécialise dans le développement web et mobile. Mes compétences me permettent de vous concevoir un site web ou une application aux interfaces aussi bien agréables à voir qu'à utiliser. Je peux également vous créer des maquettes et prototypes de site web et d'application mobile.">
+    content="Développeur Web Front-end, Développeur d'applications mobile et Designer UI/UX résidant à Lomé (Togo), je me spécialise dans le développement web et d'applications mobile(Android). Mes compétences me permettent de vous concevoir un site web ou une application aux interfaces aussi bien agréables à voir qu'à utiliser. Je peux également vous créer des maquettes et prototypes de site web et d'application mobile.">
   <meta property="twitter:image" content="https://digino.github.io/img/logo2x.png">
 
 
@@ -68,17 +68,16 @@
     <section class="section">
       <div class="shadow-section">
         <h1>Salut, moi c'est <span class="text-c"> Gino</span></h1>
-        <p>Je suis un <span class="font-600 text-c">Développeur Web Front-end</span> résidant à Lomé, Togo. Mes
-          principaux centres d'intérêts vont du code au design d'interfaces.
-          A mes heures libres, j'aime jouer aux échecs et travailler sur certains projets tech personnels.
+        <p>Je suis un <span class="font-600 text-c">Développeur Front-end ( Web et Mobile ), et Designer UI</span> résidant à Lomé, Togo. Mes
+          principaux centres d'intérêts vont naturellement du code à la réalisation d'interfaces, en passant par l'expérience utilisateur.
+          A mes heures libres, j'aime jouer aux échecs et effectuer ma veille technologique.
         </p>
       </div>
     </section>
 
     <section id="competences" class="section">
       <h2><span class="decoration">#</span>Mes compétences</h2>
-      <p>Elles ne sont pas nombreuses, raison pour laquelle je n'ai de cesse d'apprendre, de comprendre et d'en acquérir
-        chaque jour.</p>
+      <p>Je n'ai de cesse d'apprendre, de comprendre et donc d'acquérir des compétences chaque jour.</p>
       <div class="shadow-section">
         <h3>Mes compétences techniques</h3>
         <div class="row">
@@ -94,6 +93,7 @@
           <div class="line">
             <p>Bonne connaissance du CMS WordPress</p>
             <p>Bonne connaissance des frameworks Boostrap, Spectre et VueJS</p>
+            <p>Bonne connaissance du framework mobile Flutter</p>
             <p>Bonne connaissance des principes du design d'interfaces</p>
             <h4>Outils</h4>
             <p>Figma Adobe XD</p>
@@ -122,13 +122,24 @@
       <div class="row">
 
         <div class="projet shadow-section">
+          <img class="apercu" src="img/cif-shot.png">
+          <div class="description">
+            <p>Refonte du site web de la compagnie d'assurances CIF-VIE TOGO.</p>
+            <div class="divider"></div>
+            <p><span class="font-600">Mes travaux: </span>Design et intégration.
+            </p>
+            <a href="https://cif.qotribe.com/" class="link-button" title="Visiter ozofr" target="_blank">Voir la démo du site</a>
+          </div>
+        </div>
+
+        <div class="projet shadow-section">
           <img class="apercu" src="img/ozofr-shot.png">
           <div class="description">
             <p><strong>ozofr.com</strong> est une plateforme web qui indexe les offres d'emploi et appels d'offres en
               Afrique de l'Ouest.</p>
             <div class="divider"></div>
             <p><span class="font-600">Mes travaux: </span>Design et intégration. <br>
-              La stack repose sur du WordPress avec un rendu dynamique et réactif en VueJS.
+              La stack repose sur le CMS WordPress pour l'intégration de données. Quant au rendu dynamique et réactif de l'interface, il est assuré avec VueJS.
             </p>
             <a href="https://ozofr.com" class="link-button" title="Visiter ozofr" target="_blank">Voir le site</a>
           </div>
@@ -137,11 +148,10 @@
         <div class="projet shadow-section">
           <img class="apercu" src="img/heaven-shot.jpg">
           <div class="description">
-            <p>Le site web de l'association Heaven. Cette dernière oeuvre pour l'atteinte de l'ODD1</p>
+            <p>Réalisation du site web de l'association Heaven. Cette dernière oeuvre pour l'atteinte de l'ODD1 en Afrique, et plus particulièrement au Togo.</p>
             <div class="divider"></div>
-            <p><span class="font-600">Mes travaux: </span>Design et intégration. <br>
-              L'intégration s'est faite avec du HTML, du CSS et du Javascript (associé à certaines librairies
-              d'animation)
+            <p><span class="font-600">Mes travaux: </span>Design du site et intégration. <br>
+              Après la validation d'une maquette savamment proposée à l'équipe, l'intégration du site s'est fait en tenant surtout compte de la rapidité de son chargement.
             </p>
             <a href="https://vivreheaven.org" class="link-button" title="Visiter vivreheaven.com" target="_blank">Voir
               le site</a>
@@ -164,11 +174,11 @@
         <div class="projet shadow-section">
           <img class="apercu" src="img/eg-shot.jpg">
           <div class="description">
-            <p>Site web vitrine du consultant en communication institutionnelle/numérique, et podcasteur <strong>Edem
+            <p>Intégration du site web vitrine du consultant en communication institutionnelle/numérique, et podcasteur <strong>Edem
                 Gbetoglo</strong>.</p>
             <div class="divider"></div>
             <p><span class="font-600">Mes travaux: </span>Intégration du site.<br>
-              Création d'un thème WordPress unique pour le site.
+              Après des échanges avec le responsable du design du site, l'intégration s'est faite en tenant compte de son rendu responsive.
             </p>
             <a href="https://edemgbetoglo.com" class="link-button" title="Visiter le site" target="_blank">Voir le
               site</a>
@@ -181,8 +191,7 @@
             <p><strong>Helium Artworks</strong> est une banque d'images dont l'objectif est de fournir du contenu média
               typiquement africain.</p>
             <div class="divider"></div>
-            <p><span class="font-600">Mes travaux: </span>Intégration du Front-end et appel d'api.<br>
-              Front-end intégré en VueJS.
+            <p><span class="font-600">Mes travaux: </span>Design du site web et intégration du Front-end pour l'affichage des données aux visiteurs.
             </p>
             <a href="https://heliumartworks.com" class="link-button" title="Visiter Helium Artworks"
               target="_blank">Voir le site</a>
@@ -192,11 +201,10 @@
         <div class="projet shadow-section">
           <img class="apercu" src="img/erudyx-shot.jpg">
           <div class="description">
-            <p>Site web destiné au partage de la culture générale</p>
+            <p>Conception du site web Erudyx, destiné au partage de la culture générale</p>
             <div class="divider"></div>
             <p><span class="font-600">Mes travaux: </span>Design et Intégration.<br>
-              Conception d'un thème WordPress unique pour le site. Utilisation de l'api de Wikipedia pour afficher les
-              évènements éphémérides du jour
+              Utilisation de l'api de Wikipedia pour afficher les évènements éphémérides du jour
             </p>
             <a href="https://erudyx.com" class="link-button" title="Voir la maquette" target="_blank">Voir le site</a>
           </div>
@@ -217,11 +225,10 @@
         <div class="projet shadow-section">
           <img class="apercu" src="img/dstogo-shot.jpg">
           <div class="description">
-            <p>Le site web de la société <strong>Destination Togo</strong> opérant dans la conciergerie pour touristes
+            <p>Conception du site web de la société <strong>Destination Togo</strong> opérant dans la conciergerie pour touristes
               au Togo.</p>
             <div class="divider"></div>
-            <p><span class="font-600">Mes travaux: </span>Conception du site.<br>
-              Intégration faite avec WordPress et Elementor.
+            <p><span class="font-600">Mes travaux: </span>Conception du site.
             </p>
             <a href="http://destinationtogo.net" class="link-button" title="Visiter Destination Togo"
               target="_blank">Voir le site</a>
@@ -231,10 +238,10 @@
         <div class="projet shadow-section">
           <img class="apercu" src="img/cej-shot.jpg">
           <div class="description">
-            <p>Le site web du Centre Evangélique de Jonquière (Québec)</p>
+            <p>Refonte du site web du Centre Evangélique de Jonquière (Québec)</p>
             <div class="divider"></div>
-            <p><span class="font-600">Mes travaux: </span>Refonte du site<br>
-              Intégration faite avec WordPress et Elementor.
+            <p><span class="font-600">Mes travaux: </span>Design et Intégration du site<br>
+              L'intégration a été faite avec le CMS WordPress afin de permettre à l'administration de l'église d'intégrer du contenu sur le site.
             </p>
             <a href="https://cej-pentecote.com/" class="link-button" title="Visiter CEJ" target="_blank">Voir le
               site</a>
