--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
   <link rel="stylesheet" href="dist/main.css?cb=1656688589959">
 
   <meta name="theme-color" content="#000">
-  <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 </head>
 
 <body class="bg-gray">
@@ -126,7 +125,8 @@
           <div class="description">
             <p>Refonte du site web de la compagnie d'assurances CIF-VIE TOGO.</p>
             <div class="divider"></div>
-            <p><span class="font-600">Mes travaux: </span>Design et intégration.
+            <p><span class="font-600">Mes travaux: </span>Design et intégration. <br>
+              Site en cours de validation/déploiement.
             </p>
             <a href="https://cif.qotribe.com/" class="link-button" title="Visiter ozofr" target="_blank">Voir la démo du site</a>
           </div>
@@ -151,7 +151,7 @@
             <p>Réalisation du site web de l'association Heaven. Cette dernière oeuvre pour l'atteinte de l'ODD1 en Afrique, et plus particulièrement au Togo.</p>
             <div class="divider"></div>
             <p><span class="font-600">Mes travaux: </span>Design du site et intégration. <br>
-              Après la validation d'une maquette savamment proposée à l'équipe, l'intégration du site s'est fait en tenant surtout compte de la rapidité de son chargement.
+              Après la validation d'une maquette savamment proposée à l'équipe, l'intégration du site s'est faite en tenant surtout compte de la rapidité de son chargement.
             </p>
             <a href="https://vivreheaven.org" class="link-button" title="Visiter vivreheaven.com" target="_blank">Voir
               le site</a>
