--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <h1>Salut, moi c'est <span class="text-c"> Gino</span></h1>
         <p>Je suis un <span class="font-600 text-c">Développeur Front-end ( Web et Mobile ), et Designer UI</span> résidant à Lomé, Togo. Mes
           principaux centres d'intérêts vont naturellement du code à la réalisation d'interfaces, en passant par l'expérience utilisateur.
-          A mes heures libres, j'aime jouer aux échecs et effectuer ma veille technologique.
+          En attendant d'avoir la grande idée, je vous aide à mettre en oeuvre les votres.
         </p>
       </div>
     </section>
@@ -126,9 +126,9 @@
             <p>Refonte du site web de la compagnie d'assurances CIF-VIE TOGO.</p>
             <div class="divider"></div>
             <p><span class="font-600">Mes travaux: </span>Design et intégration. <br>
-              Site en cours de validation/déploiement.
+              A
             </p>
-            <a href="https://cif.qotribe.com/" class="link-button" title="Visiter ozofr" target="_blank">Voir la démo du site</a>
+            <a href="https://cifvietogo.com" class="link-button" title="Visiter ozofr" target="_blank">Voir la démo du site</a>
           </div>
         </div>
 
@@ -164,7 +164,7 @@
             <p>Site web vitrine et blog conçu pour le studio Visees.</p>
             <div class="divider"></div>
             <p><span class="font-600">Mes travaux: </span>Design et intégration. <br>
-              Conception d'un thème WordPress unique pour le site.
+              Design et Développement réalisés de A à Z.
             </p>
             <a href="https://visees.net/studio" class="link-button" title="Visiter le studio Visees"
               target="_blank">Voir le site</a>
