--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@
         <div class="projet shadow-section">
           <img class="apercu" src="img/cif-shot.png">
           <div class="description">
-            <p>Refonte du site web de la compagnie d'assurances CIF-VIE TOGO.</p>
+            <p>Refonte du site web de la compagnie d'assurances CIF Assurances VIE TOGO.</p>
             <div class="divider"></div>
             <p><span class="font-600">Mes travaux: </span>Design et intégration. <br>
-              A
+              Design et Développement réalisés de A à Z.
             </p>
-            <a href="https://cifvietogo.com" class="link-button" title="Visiter ozofr" target="_blank">Voir la démo du site</a>
+            <a href="https://cifvietogo.com" class="link-button" title="Visiter CIF Assurances VIE TOGO" target="_blank">Voir le site</a>
           </div>
         </div>
 
@@ -164,7 +164,7 @@
             <p>Site web vitrine et blog conçu pour le studio Visees.</p>
             <div class="divider"></div>
             <p><span class="font-600">Mes travaux: </span>Design et intégration. <br>
-              Design et Développement réalisés de A à Z.
+              Conception d'un thème WordPress unique pour le site.
             </p>
             <a href="https://visees.net/studio" class="link-button" title="Visiter le studio Visees"
               target="_blank">Voir le site</a>
