--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <section class="section">
       <div class="shadow-section">
         <h1>Salut, moi c'est <span class="text-c"> Gino</span></h1>
-        <p>Je suis un <span class="font-600 text-c">Développeur Front-end ( Web et Mobile ), et Designer UI</span> résidant à Lomé, Togo. Mes
+        <p>Je suis un <span class="font-600 text-c">Développeur Web et Mobile, et Designer UI</span> résidant à Lomé, Togo. Mes
           principaux centres d'intérêts vont naturellement du code à la réalisation d'interfaces, en passant par l'expérience utilisateur.
           En attendant d'avoir la grande idée, je vous aide à mettre en oeuvre les votres.
         </p>
@@ -91,12 +91,12 @@
           </div>
           <div class="line">
             <p>Bonne connaissance du CMS WordPress</p>
-            <p>Bonne connaissance des frameworks Boostrap, Spectre et VueJS</p>
+            <p>Bonne connaissance des frameworks CSS et Javscript tendances(Tailwind, Bootstrap, Pure, VueJS...)</p>
             <p>Bonne connaissance du framework mobile Flutter</p>
             <p>Bonne connaissance des principes du design d'interfaces</p>
             <h4>Outils</h4>
-            <p>Figma Adobe XD</p>
-            <p>Git, Github Actions</p>
+            <p>Figma, Adobe XD</p>
+            <p>Git, Github Actions, Gitlab</p>
           </div>
         </div>
         <h3>Mes compétences softs</h3>
@@ -153,8 +153,8 @@
             <p><span class="font-600">Mes travaux: </span>Design du site et intégration. <br>
               Après la validation d'une maquette savamment proposée à l'équipe, l'intégration du site s'est faite en tenant surtout compte de la rapidité de son chargement.
             </p>
-            <a href="https://vivreheaven.org" class="link-button" title="Visiter vivreheaven.com" target="_blank">Voir
-              le site</a>
+<!--             <a href="https://vivreheaven.org" class="link-button" title="Visiter vivreheaven.com" target="_blank">Voir
+              le site</a> -->
           </div>
         </div>
 
