--- a/index.html
+++ b/index.html
@@ -131,6 +131,18 @@
             <a href="https://cifvietogo.com" class="link-button" title="Visiter CIF Assurances VIE TOGO" target="_blank">Voir le site</a>
           </div>
         </div>
+		
+		        <div class="projet shadow-section">
+          <img class="apercu" src="img/erudyx-shot.png">
+          <div class="description">
+            <p>Conception du site web Erudyx destiné au partage de la culture générale</p>
+            <div class="divider"></div>
+            <p><span class="font-600">Mes travaux: </span>Design et Intégration.<br>
+              Utilisation de l'api de Wikipedia pour afficher les évènements éphémérides du jour
+            </p>
+            <a href="https://erudyx.com" class="link-button" title="Voir le site" target="_blank">Voir le site</a>
+          </div>
+        </div>
 
         <div class="projet shadow-section">
           <img class="apercu" src="img/ozofr-shot.png">
@@ -145,16 +157,16 @@
           </div>
         </div>
 
-        <div class="projet shadow-section">
-          <img class="apercu" src="img/heaven-shot.jpg">
+		
+				        <div class="projet shadow-section">
+          <img class="apercu" src="img/creativ-concept-shot.png">
           <div class="description">
-            <p>Réalisation du site web de l'association Heaven. Cette dernière oeuvre pour l'atteinte de l'ODD1 en Afrique, et plus particulièrement au Togo.</p>
+            <p>Conception du site web de l'agence web Creativ Concept</p>
             <div class="divider"></div>
-            <p><span class="font-600">Mes travaux: </span>Design du site et intégration. <br>
-              Après la validation d'une maquette savamment proposée à l'équipe, l'intégration du site s'est faite en tenant surtout compte de la rapidité de son chargement.
+            <p><span class="font-600">Mes travaux: </span>Design et Intégration.<br>
+              Création et animation d'une image SVG pour animer les sections de la page d'accueil
             </p>
-<!--             <a href="https://vivreheaven.org" class="link-button" title="Visiter vivreheaven.com" target="_blank">Voir
-              le site</a> -->
+            <a href="https://creativconcept.io" class="link-button" title="Voir le site" target="_blank">Voir le site</a>
           </div>
         </div>
 
@@ -199,18 +211,6 @@
         </div>
 
         <div class="projet shadow-section">
-          <img class="apercu" src="img/erudyx-shot.jpg">
-          <div class="description">
-            <p>Conception du site web Erudyx, destiné au partage de la culture générale</p>
-            <div class="divider"></div>
-            <p><span class="font-600">Mes travaux: </span>Design et Intégration.<br>
-              Utilisation de l'api de Wikipedia pour afficher les évènements éphémérides du jour
-            </p>
-            <a href="https://erudyx.com" class="link-button" title="Voir la maquette" target="_blank">Voir le site</a>
-          </div>
-        </div>
-
-        <div class="projet shadow-section">
           <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="538" height="303"
             src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FMseXH7auMsM8PAZ0XiZv9E%2FJEPERRON%3Fpage-id%3D0%253A1%26node-id%3D22%253A221%26viewport%3D224%252C-242%252C0.12%26scaling%3Dscale-down%26starting-point-node-id%3D22%253A221"
             allowfullscreen></iframe>
@@ -245,6 +245,19 @@
             </p>
             <a href="https://cej-pentecote.com/" class="link-button" title="Visiter CEJ" target="_blank">Voir le
               site</a>
+          </div>
+        </div>
+		
+		       <div class="projet shadow-section">
+          <img class="apercu" src="img/heaven-shot.jpg">
+          <div class="description">
+            <p>Réalisation du site web de l'association Heaven. Cette dernière oeuvre pour l'atteinte de l'ODD1 en Afrique, et plus particulièrement au Togo.</p>
+            <div class="divider"></div>
+            <p><span class="font-600">Mes travaux: </span>Design du site et intégration. <br>
+              Après la validation d'une maquette savamment proposée à l'équipe, l'intégration du site s'est faite en tenant surtout compte de la rapidité de son chargement.
+            </p>
+<!--             <a href="https://vivreheaven.org" class="link-button" title="Visiter vivreheaven.com" target="_blank">Voir
+              le site</a> -->
           </div>
         </div>
 
