--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
   <title>Développeur Web et Mobile, Designer UI/UX - Di Gino</title>
   <meta name="title" content="Développeur Web et Mobile, Designer UI/UX à Lomé, Togo - Di Gino">
   <meta name="description"
-    content="Développeur Web Front-end, Développeur d'applications mobile et Designer UI/UX résidant à Lomé (Togo), je me spécialise dans le développement web et d'applications mobile(Android). Mes compétences me permettent de vous concevoir un site web ou une application aux interfaces aussi bien agréables à voir qu'à utiliser. Je peux également vous créer des maquettes et prototypes de site web et d'application mobile.">
+    content="Développeur Web Front-end, Développeur d'applications mobile et Designer UI/UX résidant à Lomé (Togo), je me spécialise dans le développement web. Mes compétences me permettent de vous concevoir un site web ou une application aux interfaces aussi bien agréables à voir qu'à utiliser. Je peux également vous créer des maquettes et prototypes de site web et d'application mobile.">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://digino.github.io/">
-  <meta property="og:title" content="Développeur Web et Mobile, Designer UI/UX à Lomé, Togo - Di Gino">
+  <meta property="og:title" content="Développeur Web, Designer UI/UX à Lomé, Togo - Di Gino">
   <meta property="og:description"
-    content="Développeur Web Front-end, Développeur d'applications mobile et Designer UI/UX résidant à Lomé (Togo), je me spécialise dans le développement web et d'applications mobile(Android). Mes compétences me permettent de vous concevoir un site web ou une application aux interfaces aussi bien agréables à voir qu'à utiliser. Je peux également vous créer des maquettes et prototypes de site web et d'application mobile.">
+    content="Développeur Web, Développeur Javascript et Designer UI/UX résidant à Lomé (Togo), je me spécialise dans le développement web. Mes compétences me permettent de concevoir un site web aux interfaces aussi bien agréables à voir qu'à utiliser. Je peux également vous créer des maquettes et prototypes de site web et d'application mobile.">
   <meta property="og:image" content="https://digino.github.io/img/logo2x.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://digino.github.io/">
-  <meta property="twitter:title" content="Développeur Web et Mobile, Designer UI/UX à Lomé, Togo - Di Gino">
+  <meta property="twitter:title" content="Développeur Web, Designer UI/UX à Lomé, Togo - Di Gino">
   <meta property="twitter:description"
-    content="Développeur Web Front-end, Développeur d'applications mobile et Designer UI/UX résidant à Lomé (Togo), je me spécialise dans le développement web et d'applications mobile(Android). Mes compétences me permettent de vous concevoir un site web ou une application aux interfaces aussi bien agréables à voir qu'à utiliser. Je peux également vous créer des maquettes et prototypes de site web et d'application mobile.">
+    content="Développeur Web Front-end, Développeur Web et Designer UI/UX résidant à Lomé (Togo), je me spécialise dans le développement web et d'applications mobile(Android). Mes compétences me permettent de vous concevoir un site web ou une application aux interfaces aussi bien agréables à voir qu'à utiliser. Je peux également vous créer des maquettes et prototypes de site web et d'application mobile.">
   <meta property="twitter:image" content="https://digino.github.io/img/logo2x.png">
 
 
@@ -67,8 +67,9 @@
     <section class="section">
       <div class="shadow-section">
         <h1>Salut, moi c'est <span class="text-c"> Gino</span></h1>
-        <p>Je suis un <span class="font-600 text-c">Développeur Web et Mobile, et Designer UI</span> résidant à Lomé, Togo. Mes
-          principaux centres d'intérêts vont naturellement du code à la réalisation d'interfaces, en passant par l'expérience utilisateur.
+        <p>Je suis un <span class="font-600 text-c">Développeur Web, et Web Designer</span> résidant à Lomé, Togo. Mes
+          principaux centres d'intérêts vont naturellement du code à la réalisation d'interfaces, en passant par
+          l'expérience utilisateur.
           En attendant d'avoir la grande idée, je vous aide à mettre en oeuvre les votres.
         </p>
       </div>
@@ -86,14 +87,15 @@
             <p>Javascript</p>
             <p>PHP</p>
             <h4>Autres</h4>
-            <p>GulpJS, NodeJS</p>
+            <p>Gulp, Webpack...</p>
             <p>Git, Github Actions</p>
           </div>
           <div class="line">
-            <p>Bonne connaissance du CMS WordPress</p>
-            <p>Bonne connaissance des frameworks CSS et Javscript tendances(Tailwind, Bootstrap, Pure, VueJS...)</p>
-            <p>Bonne connaissance du framework mobile Flutter</p>
-            <p>Bonne connaissance des principes du design d'interfaces</p>
+            <p>Bonne expérience des frameworks Javascript : NodeJS, Express, VueJS</p>
+            <p>Bonne expérience des frameworks CSS Tailwind, Pure</p>
+            <p>Bonne expérience des bases de données: MongoDB et MySQL</p>
+            <p>Bonne expérience du CMS WordPress</p>
+            <p>Bonne expérience en Web Design</p>
             <h4>Outils</h4>
             <p>Figma, Adobe XD</p>
             <p>Git, Github Actions, Gitlab</p>
@@ -121,18 +123,31 @@
       <div class="row">
 
         <div class="projet shadow-section">
+          <img class="apercu" src="img/analyzbi-shot.png">
+          <div class="description">
+            <p>Conception du site web de l'agence canadienne Analyzbi spécialisée en Data</p>
+            <div class="divider"></div>
+            <p><span class="font-600">Mes travaux: </span>Design et intégration. <br>
+              Animation au scroll d'éléments visuels importants.
+            </p>
+            <a href="https://analyzbi.com" class="link-button" title="Visiter analyzbi" target="_blank">Voir le site</a>
+          </div>
+        </div>
+
+        <div class="projet shadow-section">
           <img class="apercu" src="img/cif-shot.png">
           <div class="description">
             <p>Refonte du site web de la compagnie d'assurances CIF Assurances VIE TOGO.</p>
             <div class="divider"></div>
             <p><span class="font-600">Mes travaux: </span>Design et intégration. <br>
-              Design et Développement réalisés de A à Z.
+              Ecriture d'un module particulier pour le rendu dynamique des choix d'assurance offert par la compagnie.
             </p>
-            <a href="https://cifvietogo.com" class="link-button" title="Visiter CIF Assurances VIE TOGO" target="_blank">Voir le site</a>
+            <a href="https://cifvietogo.com" class="link-button" title="Visiter CIF Assurances VIE TOGO"
+              target="_blank">Voir le site</a>
           </div>
         </div>
-		
-		        <div class="projet shadow-section">
+
+        <div class="projet shadow-section">
           <img class="apercu" src="img/erudyx-shot.png">
           <div class="description">
             <p>Conception du site web Erudyx destiné au partage de la culture générale</p>
@@ -151,14 +166,28 @@
               Afrique de l'Ouest.</p>
             <div class="divider"></div>
             <p><span class="font-600">Mes travaux: </span>Design et intégration. <br>
-              La stack repose sur le CMS WordPress pour l'intégration de données. Quant au rendu dynamique et réactif de l'interface, il est assuré avec VueJS.
+              La stack repose sur le CMS WordPress pour l'intégration de données. Quant au rendu dynamique et réactif de
+              l'interface, il est assuré avec VueJS.
             </p>
             <a href="https://ozofr.com" class="link-button" title="Visiter ozofr" target="_blank">Voir le site</a>
           </div>
         </div>
 
-		
-				        <div class="projet shadow-section">
+        <div class="projet shadow-section">
+          <img class="apercu" src="img/ozk-shot.png">
+          <div class="description">
+            <p>Développement du site web de la compagnie de voyages Ozark Travels</p>
+            <div class="divider"></div>
+            <p><span class="font-600">Mes travaux: </span>Design et intégration. <br>
+              Approche de web design créatif mais simple.
+            </p>
+            <a href="https://ozktravels.com" class="link-button" title="Visiter Ozark Travels" target="_blank">Voir le
+              site</a>
+          </div>
+        </div>
+
+
+        <div class="projet shadow-section">
           <img class="apercu" src="img/creativ-concept-shot.png">
           <div class="description">
             <p>Conception du site web de l'agence web Creativ Concept</p>
@@ -166,7 +195,8 @@
             <p><span class="font-600">Mes travaux: </span>Design et Intégration.<br>
               Création et animation d'une image SVG pour animer les sections de la page d'accueil
             </p>
-            <a href="https://creativconcept.io" class="link-button" title="Voir le site" target="_blank">Voir le site</a>
+            <a href="https://creativconcept.io" class="link-button" title="Voir le site" target="_blank">Voir le
+              site</a>
           </div>
         </div>
 
@@ -178,19 +208,22 @@
             <p><span class="font-600">Mes travaux: </span>Design et intégration. <br>
               Conception d'un thème WordPress unique pour le site.
             </p>
-            <a href="https://visees.net/studio" class="link-button" title="Visiter le studio Visees"
-              target="_blank">Voir le site</a>
+            <!-- <a href="https://visees.net/studio" class="link-button" title="Visiter le studio Visees"
+              target="_blank">Voir le site</a> -->
           </div>
         </div>
 
         <div class="projet shadow-section">
           <img class="apercu" src="img/eg-shot.jpg">
           <div class="description">
-            <p>Intégration du site web vitrine du consultant en communication institutionnelle/numérique, et podcasteur <strong>Edem
-                Gbetoglo</strong>.</p>
+            <p>Intégration du site web vitrine du consultant en communication institutionnelle/numérique, et podcasteur
+              <strong>Edem
+                Gbetoglo</strong>.
+            </p>
             <div class="divider"></div>
             <p><span class="font-600">Mes travaux: </span>Intégration du site.<br>
-              Après des échanges avec le responsable du design du site, l'intégration s'est faite en tenant compte de son rendu responsive.
+              Après des échanges avec le responsable du design du site, l'intégration s'est faite en tenant compte de
+              son rendu responsive.
             </p>
             <a href="https://edemgbetoglo.com" class="link-button" title="Visiter le site" target="_blank">Voir le
               site</a>
@@ -203,10 +236,11 @@
             <p><strong>Helium Artworks</strong> est une banque d'images dont l'objectif est de fournir du contenu média
               typiquement africain.</p>
             <div class="divider"></div>
-            <p><span class="font-600">Mes travaux: </span>Design du site web et intégration du Front-end pour l'affichage des données aux visiteurs.
+            <p><span class="font-600">Mes travaux: </span>Design du site web et intégration du Front-end pour
+              l'affichage des données aux visiteurs.
             </p>
-            <a href="https://heliumartworks.com" class="link-button" title="Visiter Helium Artworks"
-              target="_blank">Voir le site</a>
+            <!-- <a href="https://heliumartworks.com" class="link-button" title="Visiter Helium Artworks"
+              target="_blank">Voir le site</a> -->
           </div>
         </div>
 
@@ -222,18 +256,18 @@
           </div>
         </div>
 
-        <div class="projet shadow-section">
-          <img class="apercu" src="img/dstogo-shot.jpg">
-          <div class="description">
-            <p>Conception du site web de la société <strong>Destination Togo</strong> opérant dans la conciergerie pour touristes
-              au Togo.</p>
-            <div class="divider"></div>
-            <p><span class="font-600">Mes travaux: </span>Conception du site.
-            </p>
-            <a href="http://destinationtogo.net" class="link-button" title="Visiter Destination Togo"
-              target="_blank">Voir le site</a>
-          </div>
-        </div>
+        <!-- <div class="projet shadow-section"> -->
+        <!-- <img class="apercu" src="img/dstogo-shot.jpg"> -->
+        <!-- <div class="description"> -->
+        <!-- <p>Conception du site web de la société <strong>Destination Togo</strong> opérant dans la conciergerie pour touristes -->
+        <!-- au Togo.</p> -->
+        <!-- <div class="divider"></div> -->
+        <!-- <p><span class="font-600">Mes travaux: </span>Conception du site. -->
+        <!-- </p> -->
+        <!-- <a href="http://destinationtogo.net" class="link-button" title="Visiter Destination Togo" -->
+        <!-- target="_blank">Voir le site</a> -->
+        <!-- </div> -->
+        <!-- </div> -->
 
         <div class="projet shadow-section">
           <img class="apercu" src="img/cej-shot.jpg">
@@ -241,22 +275,25 @@
             <p>Refonte du site web du Centre Evangélique de Jonquière (Québec)</p>
             <div class="divider"></div>
             <p><span class="font-600">Mes travaux: </span>Design et Intégration du site<br>
-              L'intégration a été faite avec le CMS WordPress afin de permettre à l'administration de l'église d'intégrer du contenu sur le site.
+              L'intégration a été faite avec le CMS WordPress afin de permettre à l'administration de l'église
+              d'intégrer du contenu sur le site.
             </p>
-            <a href="https://cej-pentecote.com/" class="link-button" title="Visiter CEJ" target="_blank">Voir le
-              site</a>
+            <!-- <a href="https://cej-pentecote.com/" class="link-button" title="Visiter CEJ" target="_blank">Voir le
+              site</a> -->
           </div>
         </div>
-		
-		       <div class="projet shadow-section">
+
+        <div class="projet shadow-section">
           <img class="apercu" src="img/heaven-shot.jpg">
           <div class="description">
-            <p>Réalisation du site web de l'association Heaven. Cette dernière oeuvre pour l'atteinte de l'ODD1 en Afrique, et plus particulièrement au Togo.</p>
+            <p>Réalisation du site web de l'association Heaven. Cette dernière oeuvre pour l'atteinte de l'ODD1 en
+              Afrique, et plus particulièrement au Togo.</p>
             <div class="divider"></div>
             <p><span class="font-600">Mes travaux: </span>Design du site et intégration. <br>
-              Après la validation d'une maquette savamment proposée à l'équipe, l'intégration du site s'est faite en tenant surtout compte de la rapidité de son chargement.
+              Après la validation d'une maquette savamment proposée à l'équipe, l'intégration du site s'est faite en
+              tenant surtout compte de la rapidité de son chargement.
             </p>
-<!--             <a href="https://vivreheaven.org" class="link-button" title="Visiter vivreheaven.com" target="_blank">Voir
+            <!--             <a href="https://vivreheaven.org" class="link-button" title="Visiter vivreheaven.com" target="_blank">Voir
               le site</a> -->
           </div>
         </div>
